--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <header class="bg-dark">
+      <% if user_signed_in? %>
+        <%= link_to "logout", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Log in", new_user_session_path %>　     
+        <%= link_to "Sign up", new_user_registration_path %>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
