--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,3 +6,9 @@
   <%= f.text_area :body %>
   <%= f.submit '投稿' %>
 <% end %>
+<h1>全投稿</h1>
+<% @books.each do |book| %>
+  <%= book.id %>
+  <%= book.title %>
+  <%= book.body %>
+<% end %>
