--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,15 @@
   <body>
     <header class="bg-dark">
       <% if user_signed_in? %>
+        <%= link_to "Home",  root_path %>
+        <%= link_to "Users",  root_path %>
+        <%= link_to "Books",  books_path %>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to "Log in", new_user_session_path %>　     
+        <%= link_to "Home",  root_path %>
+        <%= link_to "About",  root_path %>
         <%= link_to "Sign up", new_user_registration_path %>
+        <%= link_to "Log in", new_user_session_path %>　     
       <% end %>
     </header>
     <%= yield %>
