--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="bg-dark">
       <% if user_signed_in? %>
         <%= link_to "Home",  root_path %>
-        <%= link_to "Users",  root_path %>
+        <%= link_to "Users",  users_path %>
         <%= link_to "Books",  books_path %>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
       <% else %>
