--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <h1>ユーザー詳細画面</h1>
 <%= @user.id %>
 <%= @user.name %>
-
-
+<% if @user == current_user %>
+  <%= link_to "ユーザー編集",  edit_user_path(@user) %>
+<% end %>
