--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,16 @@
-<h2>プロフィール編集</h2>
+<h2>User info</h2>
 <%= form_with model:@user, lacal:true do |f| %>
-  <label>Name</label>
-  <%= f.text_field :name, autofocus: true, placeholder:"名前"%>
-  
-  <%= f.submit "変更を保存" %>
+  <div>
+    <p>Name</p>
+    <%= f.text_field :name, autofocus: true, placeholder:"名前"%>
+  </div>
+  <div>
+    <p>Image</p>
+    <%= f.attachment_field :profile_image %>
+  </div>
+  <div>
+    <p>Introduction</p>
+    <%= f.text_area :introduction%>
+  </div>  
+  <%= f.submit "Update User" %>
 <% end %>
