--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,10 @@
 <h1>ユーザー詳細画面</h1>
 <%= @user.id %>
 <%= @user.name %>
-<%= @user.profile_image %>
+<%= attachment_image_tag @user, :profile_image %>
 <%= @user.introduction %>
 <% if @user == current_user %>
   <%= link_to "ユーザー編集",  edit_user_path(@user) %>
 <% end %>
+
+ 
