--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<%= flash[:notice] %>
+<% if flash[:notice] %>
+    <%= flash[:notice] %>
+<% end %>
 <h1>ユーザー詳細画面</h1>
 <%= @user.id %>
 <%= @user.name %>
