--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,12 @@
-<h1>welcome to Bookers!!</h1>
-<p>In Bookers</p>
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
-<p>about various books!</p>
-
-<%= link_to "Log in", new_user_session_path %>　     
-<%= link_to "Sign up", new_user_registration_path %>
+<div class="container">
+  <div class="mx-auto col-10  col-xl-6 ">
+    <h1>welcome to <i class="fas fa-book"></i><strong>Bookers!!</strong></h1>
+    <p>In <i class="fas fa-book"></i><strong>Bookers</strong></p>
+    <p>you can share and exchange your opinions , inpressions , and emotions</p>
+    <p>about various books!</p>
+    <div class="btn-wrapper mx-auto col-10">
+      <%= link_to "Log in", new_user_session_path, class:"btn btn-info btn-block m-0 sign_in" %>　     
+      <%= link_to "Sign up", new_user_registration_path , class:"btn btn-success btn-block mb-3 sign_up"%>
+    </div>
+  </div>
+</div>
