--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,7 @@
       <% end %>
     </header>
     <%= yield %>
+    
+    <script src="https://kit.fontawesome.com/e1240415e9.js" crossorigin="anonymous"></script>
   </body>
 </html>
