--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="mx-auto col-10  col-xl-6 ">
+  <div class="mx-auto col-10  col-xl-6 mt-5">
     <h1>welcome to <i class="fas fa-book"></i><strong>Bookers!!</strong></h1>
     <p>In <i class="fas fa-book"></i><strong>Bookers</strong></p>
     <p>you can share and exchange your opinions , inpressions , and emotions</p>
     <p>about various books!</p>
     <div class="btn-wrapper mx-auto col-10">
       <%= link_to "Log in", new_user_session_path, class:"btn btn-info btn-block m-0 sign_in" %>　     
-      <%= link_to "Sign up", new_user_registration_path , class:"btn btn-success btn-block mb-3 sign_up"%>
+      <%= link_to "Sign up", new_user_registration_path , class:"btn btn-success btn-block m-0 sign_up"%>
     </div>
   </div>
 </div>
