--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,54 @@
 
   <body>
     <header class="bg-dark">
-      <% if user_signed_in? %>
-        <%= link_to "Home",  root_path %>
-        <%= link_to "Users",  users_path %>
-        <%= link_to "Books",  books_path %>
-        <%= link_to "logout", destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to "Home",  root_path %>
-        <%= link_to "About",  home_about_path %>
-        <%= link_to "Sign up", new_user_registration_path %>
-        <%= link_to "Log in", new_user_session_path %>　     
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark mb-3">
+        <div class="container">
+          <%= link_to "Bookers", root_path, class:"navbar-brand" %>
+          <ul class = "navbar-nav me-auto mb-list-unstyled">
+            <% if user_signed_in? %>
+              <%= link_to "Home",  root_path %>
+              <%= link_to "Users",  users_path %>
+              <%= link_to "Books",  books_path %>
+              <%= link_to "logout", destroy_user_session_path, method: :delete %>
+            <% else %>
+              <li class=" list-unstyled ">
+                <%= link_to root_path  do %>
+                  <i class="fas fa-home text-light nav-link"> Home</i> 
+                <% end %>
+              </li>
+              <li class="nav-item list-unstyled ">
+                <%= link_to  home_about_path  do %>
+                  <i class="fas fa-link text-light nav-link"> About</i>
+                <% end %>
+              </li>
+              <li class="nav-item list-unstyled">
+                <%= link_to  new_user_registration_path do %>
+                  <i class="fas fa-user-plus text-light nav-link"> Sign up</i> 
+                <% end %>
+              </li>
+              <li class="nav-item list-unstyled">
+                <%= link_to new_user_session_path do %>
+                  <i class="fas fa-sign-in-alt text-light nav-link"> Log in</i>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
     </header>
+    
     <%= yield %>
+    
+    <footer>
+        <div class="mt-5 container">
+          <div class="row">
+            <div class="mx-auto">
+              <p>CopyRight infratop.inc</p>
+            </div>
+          </div>
+
+        </div>
+    </footer>
     
     <script src="https://kit.fontawesome.com/e1240415e9.js" crossorigin="anonymous"></script>
   </body>
