[FEAT] login後のナブバー

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,26 @@
           <%= link_to "Bookers", root_path, class:"navbar-brand" %>
           <ul class = "navbar-nav me-auto mb-list-unstyled">
             <% if user_signed_in? %>
-              <%= link_to "Home",  root_path %>
-              <%= link_to "Users",  users_path %>
-              <%= link_to "Books",  books_path %>
-              <%= link_to "logout", destroy_user_session_path, method: :delete %>
+              <li class=" list-unstyled ">
+                <%= link_to root_path  do %>
+                  <i class="fas fa-home text-light nav-link"> Home</i> 
+                <% end %>
+              </li>
+              <li class="nav-item list-unstyled ">
+                <%= link_to  users_path  do %>
+                  <i class="fas fa-users text-light nav-link"> Users</i>
+                <% end %>
+              </li>
+              <li class="nav-item list-unstyled">
+                <%= link_to  books_path do %>
+                  <i class="fas fa-book-open text-light nav-link"> Books</i> 
+                <% end %>
+              </li>
+              <li class="nav-item list-unstyled">
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fas fa-sign-in-alt text-light nav-link"> Log out</i>
+                <% end %>
+              </li>
             <% else %>
               <li class=" list-unstyled ">
                 <%= link_to root_path  do %>
