[ADD]  投稿画面左側完成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,47 @@
+<%= render './error_form', user: @user  %>
 <% if flash[:notice] %>
     <%= flash[:notice] %>
 <% end %>
-<h1>ユーザー詳細画面</h1>
-<%= @user.id %>
-<%= @user.name %>
-<%= attachment_image_tag @user, :profile_image %>
-<%= @user.introduction %>
-<% if @user == current_user %>
-  <%= link_to "ユーザー編集",  edit_user_path(@user) %>
-<% end %>
 
- 
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>User info</h1>
+      <%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg" %>
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+      </table>
+      <div class="row">
+        <% if @user == current_user %>
+          <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
+            <i class="fas fa-user-edit"></i>
+          <% end %>
+        <% end %>
+      </div>
+      <h2 class="mt-2">New book</h2>
+      <%= form_with model: @book, local:true do |f| %>
+        <div class="form-group">
+          <h4>title</h4>
+          <%= f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <h4>body</h4>
+          <%= f.text_area :body %>
+        </div>
+        <div class="form-group">
+          <%= f.submit '投稿' , class:"btn btn-success" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-md9">
+      
+    </div>
+  </div>
+</div>
