[ADD]  投稿画面右側（画像サイズ未実施）

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@
           <%= f.text_field :title %>
         </div>
         <div class="form-group">
-          <h4>body</h4>
+          <h4>Opinion</h4>
           <%= f.text_area :body %>
         </div>
         <div class="form-group">
@@ -40,8 +40,25 @@
         </div>
       <% end %>
     </div>
-    <div class="col-md9">
-      
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table table-inverse table-hover">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", class:"img-fluid" %></td>
+            <td><%= @user.name %></td>
+            <td><%= @user.introduction %></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
