--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,7 @@
           <% end %>
         <% end %>
       </div>
+      
       <h2 class="mt-2">New book</h2>
       <%= form_with model: @book, local:true do |f| %>
         <div class="form-group">
@@ -40,6 +41,7 @@
         </div>
       <% end %>
     </div>
+    
     <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class="table table-inverse table-hover">
@@ -53,9 +55,9 @@
         </thead>
         <tbody>
           <tr>
-            <td><%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", class:"img-fluid" %></td>
-            <td><%= @user.name %></td>
-            <td><%= @user.introduction %></td>
+            <td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %></td>
+            <!--    <td>book.title</d>-->
+            <!--    <td></td>-->
           </tr>
         </tbody>
       </table>
