[ADD] showでユーザー毎の本を確認

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,11 +54,13 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %></td>
-            <!--    <td>book.title</d>-->
-            <!--    <td></td>-->
-          </tr>
+          <% @books.each do |book| %>
+            <tr>
+              <td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %></td>
+              <td><%= book.title %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
