--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,69 @@
-<h1>全ユーザー表示</h1>
-<% @users.each do |user| %>
-  <div>
-    <%= user.id %>
-    <%= user.name %>
-    <%= link_to "Show", user_path(user.id) %>
-  </div>
+<%= render './error_form', user: @book  %>
+<% if flash[:notice] %>
+    <%= flash[:notice] %>
 <% end %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>User info</h1>
+      <%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg" %>
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+      </table>
+      <div class="row">
+        <% if @user == current_user %>
+          <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
+            <i class="fas fa-user-edit"></i>
+          <% end %>
+        <% end %>
+      </div>
+      
+      <h2 class="mt-2">New book</h2>
+      <%= form_with model: @book, local:true do |f| %>
+        <div class="form-group">
+          <h4>title</h4>
+          <%= f.text_field :title, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <h4>Opinion</h4>
+          <%= f.text_area :body , class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Create Book' , class:"btn btn-success" %>
+        </div>
+      <% end %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      <h1>Users</h1>
+      <table class="table table-inverse table-hover">
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th>Name</th>
+            <th></th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", size: "40x40" %></td>
+              <td><%= user.name %></td>
+              <td><%= user.introduction %></td>
+              <td><%= link_to "Show", user_path(user.id) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
