--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,14 +30,14 @@
       <%= form_with model: @book, local:true do |f| %>
         <div class="form-group">
           <h4>title</h4>
-          <%= f.text_field :title %>
+          <%= f.text_field :title, class:"form-control" %>
         </div>
         <div class="form-group">
           <h4>Opinion</h4>
-          <%= f.text_area :body %>
+          <%= f.text_area :body , class:"form-control" %>
         </div>
         <div class="form-group">
-          <%= f.submit '投稿' , class:"btn btn-success" %>
+          <%= f.submit 'Create Book' , class:"btn btn-success" %>
         </div>
       <% end %>
     </div>
