--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,59 @@
-<h2>Book detail</h2>
-<%= link_to @book.user.name, user_path(@book.user.id) %>
-<%= link_to @book.title, book_path(@book.id) %>
-<%= @book.body %>
-<% if current_user == @book.user %>
-  <%= link_to "Destroy", book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' } %>
+<%= render './error_form', user: @book  %>
+<% if flash[:notice] %>
+    <%= flash[:notice] %>
 <% end %>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>User info</h1>
+      <%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg" %>
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+      </table>
+      <div class="row">
+        <% if @user == current_user %>
+          <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
+            <i class="fas fa-user-edit"></i>
+          <% end %>
+        <% end %>
+      </div>
+      
+      <h2 class="mt-2">New book</h2>
+      <%= form_with model: @book, local:true do |f| %>
+        <div class="form-group">
+          <h4>title</h4>
+          <%= f.text_field :title, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <h4>Opinion</h4>
+          <%= f.text_area :body , class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Create Book' , class:"btn btn-success" %>
+        </div>
+      <% end %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      <h1>Book detail</h1>
+      <table class="table table-inverse table-hover">
+        <tr>
+          
+          <td><%= @book.title %></td>
+          <td><%= @book.body %></td>
+          <td><%= link_to "Edit", users_path, class:"btn btn-success" %></td>
+          <td><%= link_to "Destroy", book_path(@book), method: :delete, class:"btn btn-danger" %></td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
