--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -49,7 +49,7 @@
           
           <td><%= @book.title %></td>
           <td><%= @book.body %></td>
-          <td><%= link_to "Edit", users_path, class:"btn btn-success" %></td>
+          <td><%= link_to "Edit",  edit_book_path, class:"btn btn-success" %></td>
           <td><%= link_to "Destroy", book_path(@book), method: :delete, class:"btn btn-danger", data: { confirm: '本当に消しますか？' } %></td>
           <td></td>
         </tr>
