[FIX] homes/aboutへ行けるようにした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 <% end %>
               </li>
               <li class="nav-item list-unstyled ">
-                <%= link_to  home_about_path  do %>
+                <%= link_to  homes_about_path  do %>
                   <i class="fas fa-link text-light nav-link"> About</i>
                 <% end %>
               </li>
