--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <ul class = "navbar-nav me-auto mb-list-unstyled">
             <% if user_signed_in? %>
               <li class=" list-unstyled ">
-                <%= link_to root_path  do %>
+                <%= link_to user_path(current_user)  do %>
                   <i class="fas fa-home text-light nav-link"> Home</i> 
                 <% end %>
               </li>
