--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -56,7 +56,11 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", size: "40x40" %></td>
+              <td>
+                <%= link_to user_path(@user) do %>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", size: "40x40" %>
+                <% end %>
+              </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
             </tr>
