--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -46,8 +46,18 @@
       <h1>Book detail</h1>
       <table class="table table-inverse table-hover">
         <tr>
-          
-          <td><%= @book.title %></td>
+          <td>
+            <%= link_to user_path(@book.user) do %>
+              <%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %>
+              <br>
+              <%= @book.user.name %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to book_path(@book) do %>
+              <%= @book.title %>
+            <% end %>
+          </td>
           <td><%= @book.body %></td>
           <td><%= link_to "Edit",  edit_book_path, class:"btn btn-success" %></td>
           <td><%= link_to "Destroy", book_path(@book), method: :delete, class:"btn btn-danger", data: { confirm: '本当に消しますか？' } %></td>
