[FIX] flash,レンチアイコン

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,10 @@
       </nav>
     </header>
     
+    <% if flash[:notice] %>
+      <%= flash[:notice] %>
+    <% end %>
+    
     <%= yield %>
     
     <footer>
