--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,4 @@
 <%= render './error_form', user: @user  %>
-<% if flash[:notice] %>
-    <%= flash[:notice] %>
-<% end %>
 
 <div class="container">
   <div class="row">
@@ -21,7 +18,7 @@
       <div class="row">
         <% if @user == current_user %>
           <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
-            <i class="fas fa-user-edit"></i>
+            <i class="fas fa-user-cog"></i>
           <% end %>
         <% end %>
       </div>
