--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
       <div class="row">
         <% if @user == current_user %>
           <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
-            <i class="fas fa-user-edit"></i>
+            <i class="fas fa-user-cog"></i>
           <% end %>
         <% end %>
       </div>
