[FIX] logout icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
               </li>
               <li class="nav-item list-unstyled">
                 <%= link_to destroy_user_session_path, method: :delete do %>
-                  <i class="fas fa-sign-in-alt text-light nav-link"> Log out</i>
+                  <i class="fas fa-sign-out-alt text-light nav-link"> Log out</i>
                 <% end %>
               </li>
             <% else %>
