--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -57,8 +57,10 @@
             <% end %>
           </td>
           <td><%= @book.body %></td>
-          <td><%= link_to "Edit",  edit_book_path, class:"btn btn-success" %></td>
-          <td><%= link_to "Destroy", book_path(@book), method: :delete, class:"btn btn-danger", data: { confirm: '本当に消しますか？' } %></td>
+          <% if @book.user == current_user %>
+            <td><%= link_to "Edit",  edit_book_path, class:"btn btn-success" %></td>
+            <td><%= link_to "Destroy", book_path(@book), method: :delete, class:"btn btn-danger", data: { confirm: '本当に消しますか？' } %></td>
+          <% end %>
           <td></td>
         </tr>
       </table>
