--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
       </div>
       
       <h2 class="mt-2">New book</h2>
-      <%= form_with model: @book, local:true do |f| %>
+      <%= form_with model: @book_new, local:true do |f| %>
         <div class="form-group">
           <h4>title</h4>
           <%= f.text_field :title, class:"form-control" %>
