[FIX] book detailnのuser infoを選択したユーザーに変更

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,16 +9,16 @@
       <table class="table">
         <tr>
           <th>name</th>
-          <th><%= @user.name %></th>
+          <th><%= @book.user.name %></th>
         </tr>
         <tr>
           <th>introduction</th>
-          <th><%= @user.introduction %></th>
+          <th><%= @book.user.introduction %></th>
         </tr>
       </table>
       <div class="row">
-        <% if @user == current_user %>
-          <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
+        <% if @book.user == current_user %>
+          <%= link_to  edit_user_path(@book.user) , class:"btn btn-block btn-outline-secondary"  do %>
             <i class="fas fa-user-cog"></i>
           <% end %>
         <% end %>
