--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -54,8 +54,8 @@
           <% @books.each do |book| %>
             <tr>
               <td>
-                <%= link_to user_path(@user) do %>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", size: "40x40" %>
+                <%= link_to user_path(book.user) do %>
+                  <%= attachment_image_tag book.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg", size: "40x40" %>
                 <% end %>
               </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
