--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,6 +20,10 @@
           <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
             <i class="fas fa-user-cog"></i>
           <% end %>
+        <% else %>
+          <%= link_to  user_path(current_user) , class:"btn btn-block btn-outline-secondary"  do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
         <% end %>
       </div>
       
