--- a/app/views/_error_form.html.erb
+++ b/app/views/_error_form.html.erb
@@ -1,5 +1,5 @@
 <% if user.errors.any? %>
-  <%= user.errors.count %>件のエラーが発生しました
+  <%= user.errors.count %> errors prohibited this obj from being saved:
   <ul>
     <% user.errors.full_messages.each do |message| %>
       <li>
