[FIX]エラー表示

--- a/app/views/_error_form.html.erb
+++ b/app/views/_error_form.html.erb
@@ -1,5 +1,10 @@
 <% if user.errors.any? %>
-  <%= user.errors.count %> errors prohibited this obj from being saved:
+  <%= user.errors.count %> 
+  <% if user.errors.count == 1 %>
+    error prohibited this obj from being saved:
+  <% else %>
+    errors prohibited this obj from being saved:
+  <% end %>
   <ul>
     <% user.errors.full_messages.each do |message| %>
       <li>
