[FEAT]エラー文レイアウト

--- a/app/views/_error_form.html.erb
+++ b/app/views/_error_form.html.erb
@@ -1,15 +1,16 @@
-<% if user.errors.any? %>
-  <%= user.errors.count %> 
-  <% if user.errors.count == 1 %>
-    error prohibited this obj from being saved:
-  <% else %>
-    errors prohibited this obj from being saved:
-  <% end %>
-  <ul>
-    <% user.errors.full_messages.each do |message| %>
-      <li>
-        <%= message %>
-      </li>
+<div class="container text-danger">
+  <% if user.errors.any? %>
+    <% if user.errors.count == 1 %>
+      <h2><%= user.errors.count %> error prohibited this obj from being saved:</h2>
+    <% else %>
+      <h2><%= user.errors.count %> errors prohibited this obj from being saved:</h2>
     <% end %>
-  </ul>
-<% end %>
+    <ul>
+      <% user.errors.full_messages.each do |message| %>
+        <li>
+          <%= message %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
