[FEAT] userinfoのレイアウト修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,9 @@
     </header>
     
     <% if flash[:notice] %>
-      <%= flash[:notice] %>
+      <div class="text-success">
+        <%= flash[:notice] %>
+      </div>
     <% end %>
     
     <%= yield %>
