--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,25 @@
-<%= render './error_form', user: @user  %>
-<h2>User info</h2>
-<%= form_with model:@user, local:true do |f| %>
-  <div>
-    <p>Name</p>
-    <%= f.text_field :name, autofocus: true, placeholder:"名前"%>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-md-6">
+      <%= render './error_form', user: @user %>
+      <h2>User info</h2>
+      <%= form_with model:@user, local:true do |f| %>
+        <div class="form-group">
+          <label>Name</label>
+          <%= f.text_field :name, autofocus: true, placeholder:"名前" , class:"form-control"%>
+        </div>
+        <div class="form-group">
+          <div>
+            <label>Image</label>
+          </div>
+          <%= f.attachment_field :profile_image %>
+        </div>
+        <div class="form-group">
+          <label>Introduction</label>
+          <%= f.text_area :introduction , class:"form-control" %>
+        </div>  
+        <%= f.submit "Update User", class:"btn btn-secondary" %>
+      <% end %>
+    </div>
   </div>
-  <div>
-    <p>Image</p>
-    <%= f.attachment_field :profile_image %>
-  </div>
-  <div>
-    <p>Introduction</p>
-    <%= f.text_area :introduction%>
-  </div>  
-  <%= f.submit "Update User" %>
-<% end %>
+</div>
