--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,11 +5,11 @@
       <h1>Editing Book</h1>
       <%= form_with model:@book, local:true do |f| %>
         <div class="form-group">
-          <p>Title</p>
+          <label>Title</label>
           <%= f.text_field :title , class:"form-control" %>
         </div>
         <div class="form-group">
-          <p>Opinion</p>
+          <label>Opinion</label>
           <%= f.text_area :body, class:"form-control" %>
         </div>
         <div class="form-group">
