--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <header class="bg-dark">
-      <nav class="navbar navbar-expand-lg navbar-dark mb-3">
+      <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container">
           <%= link_to "Bookers", root_path, class:"navbar-brand" %>
           <ul class = "navbar-nav me-auto mb-list-unstyled">
@@ -63,11 +63,13 @@
       </nav>
     </header>
     
-    <% if flash[:notice] %>
-      <div class="text-success">
-        <%= flash[:notice] %>
-      </div>
-    <% end %>
+    <div class="mb-5">
+      <% if flash[:notice] %>
+        <span class="text-success">
+          <%= flash[:notice] %>
+        </span>
+      <% end %>
+    </div>
     
     <%= yield %>
     
