[ADD] index,show別に部分テンプレート作成

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,20 +19,8 @@
         <% end %>
       </div>
       
-      <h2 class="mt-2">New book</h2>
-      <%= form_with model: @book_new, local:true do |f| %>
-        <div class="form-group">
-          <h4>title</h4>
-          <%= f.text_field :title, class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <h4>Opinion</h4>
-          <%= f.text_area :body , class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.submit 'Create Book' , class:"btn btn-success" %>
-        </div>
-      <% end %>
+      <%= render './userinfo_show_form', book_new:@book_new %>
+      
     </div>
     
     <div class="col-md-8 offset-md-1">
