--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,45 +1,11 @@
 <%= render './error_form', user: @book  %>
-<% if flash[:notice] %>
-    <%= flash[:notice] %>
-<% end %>
 
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <h1>User info</h1>
-      <%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg" %>
-      <table class="table">
-        <tr>
-          <th>name</th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-      </table>
-      <div class="row">
-        <% if @user == current_user %>
-          <%= link_to  edit_user_path(@user) , class:"btn btn-block btn-outline-secondary"  do %>
-            <i class="fas fa-user-cog"></i>
-          <% end %>
-        <% end %>
-      </div>
       
-      <h2 class="mt-2">New book</h2>
-      <%= form_with model: @book, local:true do |f| %>
-        <div class="form-group">
-          <h4>title</h4>
-          <%= f.text_field :title, class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <h4>Opinion</h4>
-          <%= f.text_area :body , class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.submit 'Create Book' , class:"btn btn-success" %>
-        </div>
-      <% end %>
+      <%= render './userinfo_index_form', user:@user, book:@book %>      
+    
     </div>
     
     <div class="col-md-8 offset-md-1">
