--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,21 +18,7 @@
           <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
-      
-      <h2 class="mt-2">New book</h2>
-      <%= form_with model: @book, local:true do |f| %>
-        <div class="form-group">
-          <h4>title</h4>
-          <%= f.text_field :title, class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <h4>Opinion</h4>
-          <%= f.text_area :body , class:"form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.submit 'Create Book' , class:"btn btn-success" %>
-        </div>
-      <% end %>
+      <%= render './userinfo_show_form', book_new:@book %>
     </div>
     
     <div class="col-md-8 offset-md-1">
