--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,6 +46,7 @@
                 <% end %>
               </td>
               <td><%= book.body %></td>
+              <td><%= book.book_comments.count %></td>
             </tr>
           <% end %>
         </tbody>
