[ADD] コメント投稿

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,9 +44,14 @@
             <td><%= link_to "Edit",  edit_book_path, class:"btn btn-success" %></td>
             <td><%= link_to "Destroy", book_path(@book), method: :delete, class:"btn btn-danger", data: { confirm: '本当に消しますか？' } %></td>
           <% end %>
+          <td><%= @book.book_comments.count %></td>
           <td></td>
         </tr>
       </table>
+      <%= form_with(model:[@book, @book_comment], local:true) do |f| %>
+        <%= f.text_area :comment %>
+        <%= f.submit "コメント" %>
+      <% end %>
     </div>
   </div>
 </div>
