--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -48,10 +48,29 @@
           <td></td>
         </tr>
       </table>
-      <%= form_with(model:[@book, @book_comment], local:true) do |f| %>
-        <%= f.text_area :comment %>
-        <%= f.submit "コメント" %>
+      <% @book_comments.each do |book_comment| %>
+        <div>
+          <%= attachment_image_tag book_comment.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %>
+          <%= book_comment.comment %>
+          <%= link_to "Destroy",  book_book_comment_path(book_comment.id), method: :delete, class:"btn btn-danger", data: {confirm: "本当に消しますか？"} %>
+        </div>
+        
+        <%= book_comment.user.name %>
+        
+        
       <% end %>
+      
+      <div class="col-md-8">
+        <%= form_with(model:[@book, @book_comment], local:true) do |f| %>
+          <div class="form-group">
+            <%= f.text_area :comment, rows:5, class:"form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "コメント" , class:"btn btn-secondary" %>
+          </div>
+        <% end %>
+      </div>
+      
     </div>
   </div>
 </div>
