--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -52,12 +52,9 @@
         <div>
           <%= attachment_image_tag book_comment.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %>
           <%= book_comment.comment %>
-          <%= link_to "Destroy",  book_book_comment_path(book_comment.id), method: :delete, class:"btn btn-danger", data: {confirm: "本当に消しますか？"} %>
+          <%= link_to "Destroy",  book_book_comment_path(book_comment, book_comment.book), method: :delete, class:"btn btn-danger", data: {confirm: "本当に消しますか？"} %>
         </div>
-        
         <%= book_comment.user.name %>
-        
-        
       <% end %>
       
       <div class="col-md-8">
