--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -71,10 +71,12 @@
           <%= book_comment.comment %>
           <%= link_to "Destroy",  book_book_comment_path(book_comment.book,book_comment), method: :delete, class:"btn btn-danger", data: {confirm: "本当に消しますか？"} %>
         </div>
-        <%= book_comment.user.name %>
+        <%= link_to user_path(book_comment.user) do %>
+          <%= book_comment.user.name %>
+        <% end %>
       <% end %>
       
-      <div class="col-md-8">
+      <div class="mt-4">
         <%= form_with(model:[@book, @book_comment], local:true) do |f| %>
           <div class="form-group">
             <%= f.text_area :comment, rows:5, class:"form-control" %>
