--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,7 @@
               
               <% if book.favorited_by?(current_user) %>
                 <td>
-                  <%= link_to book_favorite_path(book), method: :delete do %>
+                  <%= link_to book_favorite_path(book,book.favorites), method: :delete do %>
                     ♡<%= book.favorites.count %>
                   <% end %>
                 </td>
