--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,13 +44,13 @@
           <% if @book.favorited_by?(current_user) %>
             <td>
               <%= link_to book_favorite_path(@book), method: :delete do %>
-                ♡<%= @book.favorites.count %>
+                <i class="fas fa-heart"></i><%= @book.favorites.count %>
               <% end %>
             </td>
           <% else %>
             <td>
               <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡️<%= @book.favorites.count %>
+                <i class="fas fa-heart"></i>️<%= @book.favorites.count %>
               <% end %>
             </td>
           <% end %>
