--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,13 +62,13 @@
         </div>
       </nav>
     </header>
-    
+
     <div class="mb-5">
       <% if flash[:notice] %>
         <span class="text-success">
           <%= flash[:notice] %>
         </span>
-      <% end %>å
+      <% end %>
     </div>
     
     <%= yield %>
