--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,13 +31,13 @@
               <% if book.favorited_by?(current_user) %>
                 <td>
                   <%= link_to book_favorite_path(book,book.favorites), method: :delete do %>
-                    ♡<%= book.favorites.count %>
+                    <i class="fas fa-heart"></i><%= book.favorites.count %>
                   <% end %>
                 </td>
               <% else %>
                 <td>
                   <%= link_to book_favorites_path(book), method: :post do %>
-                    ♡️<%= book.favorites.count %>
+                    <i class="fas fa-heart"></i>️<%= book.favorites.count %>
                   <% end %>
                 </td>
               <% end %>
