--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,7 +43,7 @@
           
           <% if @book.favorited_by?(current_user) %>
             <td>
-              <%= link_to book_favorite_path(@book), method: :delete do %>
+              <%= link_to book_favorite_path(@book), method: :delete, class:"text-danger" do %>
                 <i class="fas fa-heart"></i><%= @book.favorites.count %>
               <% end %>
             </td>
