--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -69,7 +69,9 @@
         <div>
           <%= attachment_image_tag book_comment.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40" %>
           <%= book_comment.comment %>
-          <%= link_to "Destroy",  book_book_comment_path(book_comment.book,book_comment), method: :delete, class:"btn btn-danger", data: {confirm: "本当に消しますか？"} %>
+          <% if book_comment.user == current_user %>
+            <%= link_to "Destroy",  book_book_comment_path(book_comment.book,book_comment), method: :delete, class:"btn btn-danger", data: {confirm: "本当に消しますか？"} %>
+          <% end %>
         </div>
         <%= link_to user_path(book_comment.user) do %>
           <%= book_comment.user.name %>
@@ -82,7 +84,7 @@
             <%= f.text_area :comment, rows:5, class:"form-control" %>
           </div>
           <div class="form-group">
-            <%= f.submit "コメント" , class:"btn btn-secondary" %>
+            <%= f.submit "送信" , class:"btn btn-secondary" %>
           </div>
         <% end %>
       </div>
