--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,7 +36,7 @@
                 </td>
               <% else %>
                 <td>
-                  <%= link_to book_favorites_path(book.id), method: :post do %>
+                  <%= link_to book_favorites_path(book), method: :post do %>
                     <i class="fas fa-heart"></i>️<%= book.favorites.count %>
                   <% end %>
                 </td>
