--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,20 +30,20 @@
               
               <% if book.favorited_by?(current_user) %>
                 <td>
-                  <%= link_to book_favorite_path(book, book.favorites), method: :delete, class:"text-danger" do %>
+                  <%= link_to book_favorite_path(book.id, book.id ), method: :delete, class:"text-danger" do %>
                     <i class="fas fa-heart"></i><%= book.favorites.count %>
                   <% end %>
                 </td>
               <% else %>
                 <td>
-                  <%= link_to book_favorites_path(book), method: :post do %>
+                  <%= link_to book_favorites_path(book.id), method: :post do %>
                     <i class="fas fa-heart"></i>️<%= book.favorites.count %>
                   <% end %>
                 </td>
               <% end %>
               <td>コメント数:<%= book.book_comments.count %></td>
-            </tr>
-          <% end %>
+            <% end %>
+          </tr>
         </tbody>
       </table>
     </div>
