--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,13 +48,13 @@
               <td><%= book.body %></td>
              <% if book.favorited_by?(current_user) %>
                 <td>
-                  <%= link_to book_favorite_path(book, book.favorites), method: :delete, class:"text-danger" do %>
+                  <%= link_to book_favorites_path(book), method: :delete, class:"text-danger" do %>
                     <i class="fas fa-heart"></i><%= book.favorites.count %>
                   <% end %>
                 </td>
               <% else %>
                 <td>
-                  <%= link_to book_favorites_path(book.id), method: :post do %>
+                  <%= link_to book_favorites_path(book), method: :post do %>
                     <i class="fas fa-heart"></i>️<%= book.favorites.count %>
                   <% end %>
                 </td>
